--- a/casestudies/115/casestudy/www/layout/case_id_115_id_231_c_bio.html
+++ b/casestudies/115/casestudy/www/layout/case_id_115_id_231_c_bio.html
@@ -1,46 +1,59 @@
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-
-<head>
-  <title>Biography: Michael Rezendes | Reportear una Verdad Explosiva: Boston Globe y los Abusos Sexuales  en la Iglesia Católica
+<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+ <head>
+  <title>
+   Biography: Michael Rezendes | Reportear una Verdad Explosiva: Boston Globe y los Abusos Sexuales  en la Iglesia Católica
   </title>
- 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-<style type="text/css" media="all">@import "css_global/node/node.css";</style>
-<style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-<style type="text/css" media="all">@import "css_global/system/system.css";</style>
-<style type="text/css" media="all">@import "css_global/user/user.css";</style>
-<style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-<style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-<style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-<script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-<script type="text/javascript" src="js/img_assist.js"></script>
-<script type="text/javascript" src="js/audioimage.js"></script>
-<script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-<script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-<script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
-    <script type="text/javascript">
-      var GB_ANIMATION = true;
+  <meta content="text/html; charset=cp1252" http-equiv="Content-Type"/>
+  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+  <style media="all" type="text/css">
+   @import "css_global/book/book.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/node/node.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/system/defaults.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/system/system.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/user/user.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/img_assist/img_assist.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/knightcase/style.css";
+  </style>
+  <style media="print" type="text/css">
+   @import "css_global/knightcase/print.css";
+  </style>
+  <script src="com/jquery/jquery-1.2.6.js" type="text/javascript">
+  </script>
+  <script src="js/img_assist.js" type="text/javascript">
+  </script>
+  <script src="js/audioimage.js" type="text/javascript">
+  </script>
+  <script src="com/jquery/jquery.metadata.js" type="text/javascript">
+  </script>
+  <script src="com/jquery/jquery.media.js" type="text/javascript">
+  </script>
+  <script src="swfobject.js" type="text/javascript">
+  </script>
+  <script type="text/javascript">
+   var GB_ROOT_DIR = "com/greybox/";
+  </script>
+  <script src="com/greybox/AJS.js" type="text/javascript">
+  </script>
+  <script src="com/greybox/AJS_fx.js" type="text/javascript">
+  </script>
+  <script src="com/greybox/gb_scripts.js" type="text/javascript">
+  </script>
+  <link href="com/greybox/gb_styles.css" media="all" rel="stylesheet" type="text/css"/>
+  <script type="text/javascript">
+   var GB_ANIMATION = true;
       $(document).ready(function(){
         $("a.greybox").click(function(){
           var t = this.title || this.innerHTML || this.href;
@@ -48,17 +61,14 @@
           return false;
         });
       });
-    </script>
-
-
-<script type="text/javascript">
-    $(function() {
+  </script>
+  <script type="text/javascript">
+   $(function() {
         $('a.media').media();
     });
-</script>
-
-<style>
-#main .title
+  </script>
+  <style>
+   #main .title
 {
 	color: ;
 	font: normal 1.8em "trebuchet ms", verdana, helvetica, arial, sans-serif;
@@ -74,341 +84,302 @@
 #media {
 font-style:italic;
 }
-
-
-
-</style>
-</head>
-
-<body>
-
-<div id="container">
-
-<!-- Banner header -->
-
-<div id="header" style="background: url('../../files/global/115/180-02091_Banner Revise_JL_V1.jpg') top left no-repeat;">
-<table border="0" cellspacing="0" cellpadding="0">
-	<tr>
-		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_115.html" title="Home"><span>Biography: Michael Rezendes</span></a></h1>						</td>
-		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
-	</tr>
-
-</table>
-      
-      
-</div><!-- id="header" -->
-
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
-<div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
-    <h2 class="title">Sections</h2>
-    <div class="content">
-<ul class="menu">
-
-
-
-<li class="leaf"><a  href="case_id_115.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_812.html">Introducción</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_813.html">Boston Globe— una breve historia</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_814.html">Baron: Un nuevo rostro</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_815.html">Nace una investigación</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_816.html">El Equipo Spotlight</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_817.html">El escenario nacional</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_818.html">La “ciudad más católica”</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_819.html">El Cardenal Law</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_820.html">El Diario y el Cardenal</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_821.html">El Globe y los católicos de Boston</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_822.html">El caso del padre Geoghan</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_823.html">Comenzar a escarbar</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_824.html">Organizar los archivos</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_825.html">Crece la base de datos </a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_826.html">Cuando la historia se torna personal</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_827.html">Reportear tu cultura</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_828.html">Potencial reacción</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_829.html">Rezendes recibe una pista</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_115_id_830.html">¿Publicar o hacer una pausa?</a>
-
-
-
-
-
-</li>
-
-
-</ul>
-</div>
- </div>
-
-  <div class="block block-block" id="block-block-1">
-    <h2 class="title"></h2>
-
-	
-    <div class="content"><div class="content">
-<ul class="menu">
-<li class="printpdf">
-<a href="../../files/global/115/Boston&#32;Globe&#32;y&#32;los&#32;Abusos&#32;Sexuales&#32;&#32;en&#32;la&#32;Iglesia&#32;Católica_wm&#32;.pdf" target="_blank">Download this case as a PDF</a></li>
-</ul>
-</div>
-</div>
-
-
- </div>
-	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
-	
-	<div id="contentbody" class="three-column" >
-				
-		<div id="main">
-		<div class="breadcrumb"><a href="case_id_115.html">Home</a></div>		
-		<h1 class="title">Biography: Michael&nbsp;Rezendes</h1>		
-		
-		  <div class="node">        
-    <span class="taxonomy"></span>
-    <div class="content"><div style="padding: 10px; float: right;">
-	<img alt="" src="../../files/photos/252/rezendes.gif" /><br />
-	<p class="caption">
-		&nbsp;</p>
-</div>
-<p>
-	Spotlight team member Michael Rezendes had been a staff writer and editor at the <i>Globe </i>since 1989. He covered presidential, state, and local politics. He was also a weekly essayist, roving national correspondent, city hall bureau chief, and the deputy editor for national news.</p>
-<p>
-	Before joining the <i>Globe</i>, Rezendes was a staff writer at the <i>Washington Post</i>, and covered government and politics for both the <i>San Jose Mercury News </i>and the <i>Boston Phoenix</i>.</p>
-<p>
-	Rezendes graduated from Boston University and held an MFA from the American Film Institute.</p>
-<p>
-	<i>Listen to Rezendes describe his role in the investigation.</i><br />
-	<img alt="" border="0" class="audiofile" src="../../files/audios/47/Rezendes&#32;bio.mp3" /></p>
-</div>
+  </style>
+ </head>
+ <body>
+  <div id="container">
+   <!-- Banner header -->
+   <div id="header" style="background: url('../../files/global/115/180-02091_Banner Revise_JL_V1.jpg') top left no-repeat;">
+    <table border="0" cellpadding="0" cellspacing="0">
+     <tbody>
+      <tr>
+       <td style="width: 100%;">
+        <h1 class="site-name">
+         <a href="case_id_115.html" title="Home">
+          <span>
+           Biography: Michael Rezendes
+          </span>
+         </a>
+        </h1>
+       </td>
+       <td class="kcsi_logo">
+        <a class="knightlogo" href="https://casestudies.jrn.columbia.edu/" target="_blank">
+        </a>
+       </td>
+      </tr>
+     </tbody>
+    </table>
+   </div>
+   <!-- id="header" -->
+   <!-- Primary links, if enabled -->
+   <!-- Secondary links, if enabled -->
+   <!-- <div></div> -->
+   <div id="pagebody">
+    <!-- Left sidebar -->
+    <div id="sidebar-left">
+     <div class="block block-menu" id="block-menu-63">
+      <h2 class="title">
+       Sections
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_115.html">
+          Title Page
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_115_id_812.html">
+          Introducción
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_115_id_813.html">
+          Boston Globe— una breve historia
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_115_id_814.html">
+          Baron: Un nuevo rostro
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_115_id_815.html">
+          Nace una investigación
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_115_id_816.html">
+          El Equipo Spotlight
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_115_id_817.html">
+          El escenario nacional
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_115_id_818.html">
+          La “ciudad más católica”
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_115_id_819.html">
+          El Cardenal Law
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_115_id_820.html">
+          El Diario y el Cardenal
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_115_id_821.html">
+          El Globe y los católicos de Boston
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_115_id_822.html">
+          El caso del padre Geoghan
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_115_id_823.html">
+          Comenzar a escarbar
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_115_id_824.html">
+          Organizar los archivos
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_115_id_825.html">
+          Crece la base de datos
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_115_id_826.html">
+          Cuando la historia se torna personal
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_115_id_827.html">
+          Reportear tu cultura
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_115_id_828.html">
+          Potencial reacción
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_115_id_829.html">
+          Rezendes recibe una pista
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_115_id_830.html">
+          ¿Publicar o hacer una pausa?
+         </a>
+        </li>
+       </ul>
       </div>
-				</div><!-- id="main" -->
-	</div><!-- id="contentbody" -->
-
-		<!-- Right sidebar for Bios -->
-	<div id="sidebar-right">
-		  <div class="block block-menu" id="block-menu-65">
-    <h2 class="title">Biographies</h2>
-    <div class="content">
-<ul class="menu">
-
-<li class="leaf"><a  href="case_id_115_id_230_c_bio.html">Walter&nbsp;Robison</a></li>
-
-<li class="leaf"><a  class="active"  href="case_id_115_id_231_c_bio.html">Michael&nbsp;Rezendes</a></li>
-
-<li class="leaf"><a  href="case_id_115_id_232_c_bio.html">Sacha&nbsp;Pfeiffer</a></li>
-
-<li class="leaf"><a  href="case_id_115_id_233_c_bio.html">Martin&nbsp;Baron</a></li>
-
-<li class="leaf"><a  href="case_id_115_id_234_c_bio.html">Ben &nbsp;Bradlee, Jr.</a></li>
-
-
-</ul>
-</div>
- </div>
-	</div><!-- id="sidebar-right" -->
-	
-
-	
-	<div class="visualclear"></div>
-
-
-</div><!-- id="pagebody" -->
-
-
-
-<div id="footer">
-	<div id="footer-inner">
-	  <div class="block block-menu" id="block-menu-66">
-    <h2 class="title">System menu</h2>
-    <div class="content">
-<ul class="menu">
-<li class="leaf"><a href="http://www.journalism.columbia.edu">© 2012 Columbia University Graduate School of Journalism</a></li>
-
-</ul>
-</div>
- </div>
-			</div><!-- id="footer-inner" -->
-
-</div><!-- id="footer" -->
-
-
-
-</div><!-- id="container" -->
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+     </div>
+     <div class="block block-block" id="block-block-1">
+      <h2 class="title">
+      </h2>
+      <div class="content">
+       <div class="content">
+        <ul class="menu">
+         <li class="printpdf">
+          <a href="../../files/global/115/Boston Globe y los Abusos Sexuales  en la Iglesia Católica_wm .pdf" target="_blank">
+           Download this case as a PDF
+          </a>
+         </li>
+        </ul>
+       </div>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-left" -->
+    <!-- Main content of page -->
+    <div class="three-column" id="contentbody">
+     <div id="main">
+      <div class="breadcrumb">
+       <a href="case_id_115.html">
+        Home
+       </a>
+      </div>
+      <h1 class="title">
+       Biography: Michael Rezendes
+      </h1>
+      <div class="node">
+       <span class="taxonomy">
+       </span>
+       <div class="content">
+        <div style="padding: 10px; float: right;">
+         <img alt="" src="../../files/photos/252/rezendes.gif"/>
+         <br/>
+         <p class="caption">
+         </p>
+        </div>
+        <p>
+         Spotlight team member Michael Rezendes had been a staff writer and editor at the
+         <i>
+          Globe
+         </i>
+         since 1989. He covered presidential, state, and local politics. He was also a weekly essayist, roving national correspondent, city hall bureau chief, and the deputy editor for national news.
+        </p>
+        <p>
+         Before joining the
+         <i>
+          Globe
+         </i>
+         , Rezendes was a staff writer at the
+         <i>
+          Washington Post
+         </i>
+         , and covered government and politics for both the
+         <i>
+          San Jose Mercury News
+         </i>
+         and the
+         <i>
+          Boston Phoenix
+         </i>
+         .
+        </p>
+        <p>
+         Rezendes graduated from Boston University and held an MFA from the American Film Institute.
+        </p>
+        <p>
+         <i>
+          Listen to Rezendes describe his role in the investigation.
+         </i>
+         <br/>
+         <!--<img alt="" border="0" class="audiofile" src="../../files/audios/47/Rezendes bio.mp3"/>-->
+         <audio controls><source src="../../files/audios/47/Rezendes&#32;bio.mp3" type="audio/mpeg"></audio>
+        </p>
+       </div>
+      </div>
+     </div>
+     <!-- id="main" -->
+    </div>
+    <!-- id="contentbody" -->
+    <!-- Right sidebar for Bios -->
+    <div id="sidebar-right">
+     <div class="block block-menu" id="block-menu-65">
+      <h2 class="title">
+       Biographies
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_115_id_230_c_bio.html">
+          Walter Robison
+         </a>
+        </li>
+        <li class="leaf">
+         <a class="active" href="case_id_115_id_231_c_bio.html">
+          Michael Rezendes
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_115_id_232_c_bio.html">
+          Sacha Pfeiffer
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_115_id_233_c_bio.html">
+          Martin Baron
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_115_id_234_c_bio.html">
+          Ben  Bradlee, Jr.
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-right" -->
+    <div class="visualclear">
+    </div>
+   </div>
+   <!-- id="pagebody" -->
+   <div id="footer">
+    <div id="footer-inner">
+     <div class="block block-menu" id="block-menu-66">
+      <h2 class="title">
+       System menu
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="http://www.journalism.columbia.edu">
+          © 2012 Columbia University Graduate School of Journalism
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="footer-inner" -->
+   </div>
+   <!-- id="footer" -->
+  </div>
+  <!-- id="container" -->
+  <script type="text/javascript">
+   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
+  </script>
+  <script type="text/javascript">
+   try {
 var pageTracker = _gat._getTracker("UA-51144540-10");
 pageTracker._trackPageview();
-} catch(err) {}</script>
-
-</body>
+} catch(err) {}
+  </script>
+ </body>
 </html>
